--- a/MirrorServer/mainwindow.ui
+++ b/MirrorServer/mainwindow.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>470</width>
-    <height>425</height>
+    <height>686</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -112,6 +118,12 @@
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>500</height>
+       </size>
       </property>
       <property name="text">
        <string/>
