Add FPS counter to UI and add test for markers very close together

--- a/MirrorServer/Server/mainwindow.ui
+++ b/MirrorServer/Server/mainwindow.ui
@@ -136,10 +136,39 @@
        <item row="5" column="1">
         <widget class="QLineEdit" name="cameraDevice">
          <property name="text">
-          <string>-1</string>
+          <string>0</string>
          </property>
          <property name="maxLength">
           <number>8</number>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>Information</string>
+      </property>
+      <layout class="QFormLayout" name="formLayout_2">
+       <item row="0" column="0">
+        <widget class="QLabel" name="fpsLabel">
+         <property name="font">
+          <font>
+           <weight>50</weight>
+           <bold>false</bold>
+          </font>
+         </property>
+         <property name="text">
+          <string>FPS:</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLabel" name="fps">
+         <property name="text">
+          <string>N/A</string>
          </property>
         </widget>
        </item>
