--- a/MirrorServer/Server/mainwindow.ui
+++ b/MirrorServer/Server/mainwindow.ui
@@ -161,7 +161,7 @@
                <string>Solid red</string>
               </property>
               <property name="checked">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -169,6 +169,9 @@
              <widget class="QRadioButton" name="cornerChoiceRedYellow">
               <property name="text">
                <string>Red and yellow</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
