--- a/MirrorServer/Server/mainwindow.ui
+++ b/MirrorServer/Server/mainwindow.ui
@@ -212,14 +212,14 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
+          <item row="2" column="0">
            <widget class="QLabel" name="debugLabel">
             <property name="text">
              <string>Debug overlay:</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="2" column="1">
            <widget class="QCheckBox" name="debugCheck">
             <property name="text">
              <string>Enable</string>
@@ -229,6 +229,20 @@
             </property>
             <property name="tristate">
              <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="levelLabel">
+            <property name="text">
+             <string>Current Level:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLabel" name="level">
+            <property name="text">
+             <string>N/A</string>
             </property>
            </widget>
           </item>
