--- a/MirrorServer/Server/mainwindow.ui
+++ b/MirrorServer/Server/mainwindow.ui
@@ -280,7 +280,7 @@
           <item row="1" column="1">
            <widget class="QLabel" name="level">
             <property name="text">
-             <string>N/A</string>
+             <string>0</string>
             </property>
            </widget>
           </item>
